data/derived/sp14/progs/unify/prog2601.ml.out
Characters 8-9:
  let c = 3
          ^
Error: This expression has type int
       This is not a function; it cannot be applied.
